examples/valid/html.reqlang
#!/usr/bin/env reqlang
---
GET https://httpbin.org/html HTTP/1.1
