examples/invalid/undefined_variable_reference_in_request.reqlang
#!/usr/bin/env reqlang
---
GET {{:base_url}} HTTP/1.1
---
